# amei_exercises

./: .gitignore  crop.json  monica_run_lib.py  pyproject.toml  run-consumer.py  run-producer.py  run_a_few_monicas.cmd  run_setup.sh  sim.json  site.json
aimes_bare_soil/: AMEI_fallow_Aimes_2024-05-16.xlsx  AMEI_template_Aimes_daily_layers_output.txt  AMES8WSW_1982-1995.csv  run-consumer.py  run-producer.py  sim.json  site.json
ames_bare_soil/: AMEI_fallow_Ames_2024-05-16.xlsx  AMEI_template_Ames_daily_output.txt  assumption_for_monica.md  crop.json  run-consumer.py  run-producer.py  sim.json  site.json
input_data/: SoilData.csv  SoilMetadata.csv  Treatment.csv  WeatherMetadata.csv
input_data/WeatherData/: CAQCL0AW0.00.WTH  CAQCL0AW0.25.WTH  CAQCL0AW0.75.WTH  CAQCL2AW0.00.WTH  CAQCL2AW0.25.WTH  CAQCL2AW0.50.WTH  CAQCL2AW0.75.WTH  CAQCL2AW1.00.WTH  CAQCL7AW0.00.WTH  CAQCL7AW0.25.WTH  CAQCL7AW0.50.WTH  CAQCL7AW1.00.WTH  COCAL0AW0.00.WTH  COCAL0AW0.25.WTH  COCAL0AW0.50.WTH  COCAL0AW0.75.WTH  COCAL0AW1.00.WTH  COCAL2AW0.00.WTH  COCAL2AW0.25.WTH  COCAL2AW0.50.WTH  (+63 more)
maricopa_wheat_face/: AMEI_MaricopaWheatFACE_Key_reporting_variables.xlsx  AMEI_simulation_protocol_MaricopaWheatFACE_2024-09-11.docx  AMIE_template_MarcicopaWheatFACE_daily_output.txt  AMIE_template_MarcicopaWheatFACE_layers_output.txt  AMIE_template_MarcicopaWheatFACE_summary_output.txt  crop.json  run-consumer.py  run-producer.py  sim.json  site.json
soil_temperature_sensitivity_analysis/: run-consumer.py  run-producer.py  sim.json
standalone_for_debugging/: run-consumer.py  run-producer.py
(+65 files in other folders)
